--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "rxjs": "~7.8.0",
+    "three": "^0.177.0",
+    "three-globe": "^2.42.8",
     "tree": "^0.1.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
