--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,11 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": true,
+              "sourceMap": false,
+              "namedChunks": false
+
             },
             "development": {
               "optimization": false,
