--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "private": true,
   "dependencies": {
@@ -20,7 +22,6 @@
     "rxjs": "~7.8.0",
     "three": "^0.177.0",
     "three-globe": "^2.42.8",
-    "tree": "^0.1.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -38,6 +39,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.4",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.7.2"
   }
