--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@emailjs/browser": "^4.4.1",
     "rxjs": "~7.8.0",
     "three": "^0.177.0",
     "three-globe": "^2.42.8",
