--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
       - name: 🚀 Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages  # Target branch
-          folder: dist/treejs-portfolio  # Output folder
+          branch: gh-pages
+          folder: dist/treejs-portfolio/browser
