--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,3 +32,5 @@ jobs:
         with:
           branch: gh-pages
           folder: dist/treejs-portfolio/browser
+          cname: felixhollndonner.com
+
