--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,7 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "lib": ["es2018", "dom", "dom.iterable"],
+    "module": "es2015"
   },
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts", "src/**/*.ts"]
 }
